# CURSA4

./: .gitignore  README.md  pyproject.toml
0_dataset_development/: .gitignore  async_translate.py  checkers.py  cleaners.py  css_extractor.py  filter.py  filter_intersection.py  get_stats_dataset.py  pyproject.toml  train_test_split.py  visualize_labels.py  visualize_xpaths.py
1_segmentation/: extended_segmentation.ipynb  pyproject.toml  segmentation.ipynb
2_classification/: classification.ipynb  extended_classification.ipynb  heuristic_classification.ipynb  metrics.py  pyproject.toml
3_matching/: extended_complex.ipynb  pyproject.toml  tmp.py  xpath_analyzer.py
4_render_system/: metrics.py  pyproject.toml  render.ipynb  testing.py  tmp.py  xpath_analyzer.py
