[tool.poetry]
name = "cursa4"
version = "0.1.0"
description = ""
authors = ["Alexander Kustenkov <kustaa@ispras.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
