[tool.poetry]
name = "final-experiment"
version = "0.1.0"
description = ""
authors = ["Alexander Kustenkov <kustaa@ispras.ru>"]
readme = "README.md"
packages = [{include = "final_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
transformers = "^4.39.3"
torch = "^2.2.2"
beautifulsoup4 = "^4.12.3"
iprogress = "^0.4"
evaluate = "^0.4.1"
seqeval = "^1.2.2"
matplotlib = "^3.8.4"
ipywidgets = "^8.1.2"
lxml = "^5.2.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
